@@ -34,7 +34,6 @@ import org.junit.Test;
 import java.net.URL;
 import java.net.ServerSocket;
 import java.net.SocketTimeoutException;
-import java.lang.reflect.UndeclaredThrowableException;
 import java.util.ArrayList;
 
 public class TestProtocolHttp extends TestProtocolSpecific {
@@ -62,7 +61,7 @@ public class TestProtocolHttp extends TestProtocolSpecific {
     Simple proxy = SpecificRequestor.getClient(Simple.class, client);
     try {
       proxy.hello("foo");
-    } catch (UndeclaredThrowableException e) {
+    } catch (AvroRemoteException e) {
       throw e.getCause();
     } finally {
       s.close();
